move null flag to resources, use when module unavailable in controllers todo outputwriter